# lingua-i18n-rs

./: Cargo.toml  README.md
examples/basic/: main.rs
examples/leptos/: Cargo.toml  index.html  main.rs
examples/leptos/languages/: en.json
examples/leptos/src/: lib.rs
examples/load_config/: config.toml  main.rs
examples/load_config/languages/: de.json
src/: error.rs  lib.rs  lingua.rs
