[package]
name = "lingua-i18n-rs"
version = "0.2.0"
edition = "2024"
authors = ["KarnesTH <p_haehnel@hotmail.de>"]
description = "A simple and lightweight internationalization (i18n) library for Rust"
license = "MIT"
repository = "https://github.com/Karnes-Development/lingua-i18n-rs"
keywords = [
    "i18n",
    "internationalization",
    "localization",
    "translation",
    "language",
]
categories = ["internationalization", "localization"]
readme = "README.md"
documentation = "https://docs.rs/lingua-i18n-rs"

[dependencies]
once_cell = "1.21.3"
serde_json = "1.0.140"
sys-locale = "0.3.2"
thiserror = "2.0.12"

[[example]]
name = "basic"
path = "examples/basic/main.rs"

[[example]]
name = "load_config"
path = "examples/load_config/main.rs"
