[package]
name = "lingua-i18n-rs"
version = "0.3.0"
edition = "2024"
authors = ["KarnesTH <p_haehnel@hotmail.de>"]
description = "A simple and lightweight internationalization (i18n) library for Rust"
license = "MIT"
repository = "https://github.com/Karnes-Development/lingua-i18n-rs"
keywords = [
    "i18n",
    "internationalization",
    "localization",
    "translation",
    "language",
]
categories = ["internationalization", "localization"]
readme = "README.md"
documentation = "https://docs.rs/lingua-i18n-rs"

[dependencies]
js-sys = { version = "0.3.77", optional = true }
once_cell = "1.21.3"
serde_json = "1.0.140"
sys-locale = "0.3.2"
thiserror = "2.0.12"
wasm-bindgen = { version = "0.2.100", optional = true }
wasm-bindgen-futures = { version = "0.4.50", optional = true }
web-sys = { version = "0.3.77", features = [
    "Window",
    "Navigator",
    "Document",
    "Response",
    "RequestInit",
    "RequestMode",
    "Request",
    "Headers",
    "HtmlSelectElement",
    "HtmlElement",
    "Element",
    "Event",
    "EventTarget",
    "console",
], optional = true }

[features]
default = ["fs"]
fs = []
web = ["web-sys", "wasm-bindgen", "wasm-bindgen-futures", "js-sys"]

[[example]]
name = "basic"
path = "examples/basic/main.rs"

[[example]]
name = "load_config"
path = "examples/load_config/main.rs"

[[example]]
name = "leptos"
path = "examples/leptos/main.rs"
